+
NOTE: Currently both the long and short names for `libupsclient` should be
installed.
   * newly added support to scan several IP addresses (single or ranges)
     with the same call, by repeating command-line options; also `-m auto{,4,6}`
     can be specified (once) to select IP (all, IPv4, IPv6) address ranges of
     configured local network interfaces (currently not implemented for WIN32).
     [issue #2244, PR #2509, PR #2513]
   * bumped version of `libnutscan` to 2.5.2, it now includes a few more
     methods and symbols from `libcommon`. [issue #2244, PR #2509]

 - common code:
   * introduced a `NUT_DEBUG_SYSLOG` environment variable to tweak activation
     of syslog message emission (and related detachment of `stderr` when
     backgrounding), primarily useful for NIT and perhaps systemd. Most
     methods relied on logging bits being set, so this change aims to be
     minimally invasive to impact setting of those bits (or not) in the
     first place. [#2394]
   * `root`-owned daemons now use not the hard-coded `PIDPATH` value set
     by the `configure` script during build, but can override it with a
     `NUT_PIDPATH` environment variable in certain use-cases (such as
     tests). [#2407]
   * introduced a check for daemons working with PID files to double-check
     that if they can resolve the program name of a running process with
     this identifier, that such name matches the current program (avoid
     failures to start NUT daemons if PID files are on persistent storage,
     and some unrelated program got that PID after a reboot).  This might
     introduce regressions for heavily customized NUT builds (e.g. those
     embedded in NAS or similar devices) where binary file names differ
     significantly from a `progname` string defined in the respective NUT
     source file, so a boolean `NUT_IGNORE_CHECKPROCNAME` environment
     variable support was added to optionally disable this verification.